@@ -1,4 +1,5 @@
 0.05
+ - Add support for all files with LICENSE prefix.
  - Update copyright years.
 
 0.04 2023-12-04T16:54:47+01:00
